[package]
name = "endless-trial"
version = "0.1.0"
authors = ["Vinícius Miguel <lemao.vrm07@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
soloud = "0.3"

[dependencies.tetra]
version = "0.6.3"
default-features = false
features = ['texture_png', 'font_ttf', 'sdl2_bundled','sdl2_static_link']

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
