[package]
name = "endless-trial"
version = "0.1.0"
authors = ["Vinícius Miguel <lemao.vrm07@hotmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.7.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["alloc", "small_rng", "getrandom"]

[dependencies.tetra]
version = "0.7.0"
default-features = false
features = ['texture_png', 'font_ttf', 'sdl2_bundled','sdl2_static_link']

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
